Added role-based JWT authorization